{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 349,
  "lineage": "c97a5a3a-9265-a943-0def-7dbc10711181",
  "resources": [
    {
      "module": "module.Jenkins_Server",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:subnet/subnet-0a5679831dce24d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-0a5679831dce24d58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472665048339",
            "state": "available",
            "tags": {
              "Name": "Dev"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          }
        }
      ]
    },
    {
      "module": "module.Jenkins_Server",
      "mode": "data",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:vpc/vpc-0cb02b537ba008008",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-038135554690ec5f4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-734b721b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb02b537ba008008",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555fd71bb5282b8d",
            "owner_id": "472665048339",
            "state": "available",
            "tags": {
              "Name": "Dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.Jenkins_Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f5781cba46a5e8a",
            "arn": "arn:aws:ec2:eu-west-2:472665048339:instance/i-08f42892a494fac1e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f42892a494fac1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00edf4df479d87015",
            "private_dns": "ip-10-0-1-249.eu-west-2.compute.internal",
            "private_ip": "10.0.1.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0229cc77c75aba363",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5679831dce24d58",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077aa47876729c962"
            ]
          },
          "dependencies": [
            "module.Jenkins_Server.aws_security_group.Jenkins-SG",
            "module.Jenkins_Server.data.aws_subnet.selected",
            "module.Jenkins_Server.data.aws_vpc.my_vpc",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route.internet-r",
            "module.VPC.aws_route_table.internet-rt",
            "module.VPC.aws_subnet.Subnet1",
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Jenkins_Server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:security-group/sg-077aa47876729c962",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077aa47876729c962",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": "",
            "owner_id": "472665048339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sg"
            },
            "tags_all": {
              "Name": "jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Jenkins_Server.data.aws_vpc.my_vpc",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route.internet-r",
            "module.VPC.aws_route_table.internet-rt",
            "module.VPC.aws_subnet.Subnet1",
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:vpc/vpc-0cb02b537ba008008",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-038135554690ec5f4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-734b721b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb02b537ba008008",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555fd71bb5282b8d",
            "owner_id": "472665048339",
            "state": "available",
            "tags": {
              "Name": "Dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.Security_Group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:security-group/sg-015dd8a82ed9ca772",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "id": "sg-015dd8a82ed9ca772",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "472665048339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Group.data.aws_vpc.my_vpc",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route.internet-r",
            "module.VPC.aws_route_table.internet-rt",
            "module.VPC.aws_subnet.Subnet1",
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:internet-gateway/igw-0374cb118e4464210",
            "id": "igw-0374cb118e4464210",
            "owner_id": "472665048339",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0374cb118e4464210",
            "id": "r-rtb-033d8bde308a2a9791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033d8bde308a2a979",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.internet-rt",
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:route-table/rtb-033d8bde308a2a979",
            "id": "rtb-033d8bde308a2a979",
            "owner_id": "472665048339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "internet-rt"
            },
            "tags_all": {
              "Name": "internet-rt"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:subnet/subnet-0a5679831dce24d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a5679831dce24d58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472665048339",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:vpc/vpc-0cb02b537ba008008",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079e69e2ea7b4f573",
            "default_route_table_id": "rtb-0555fd71bb5282b8d",
            "default_security_group_id": "sg-08daaf9c309e8c371",
            "dhcp_options_id": "dopt-734b721b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb02b537ba008008",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555fd71bb5282b8d",
            "owner_id": "472665048339",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.Web_server",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:security-group/sg-015dd8a82ed9ca772",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "web-sg"
                ]
              }
            ],
            "id": "sg-015dd8a82ed9ca772",
            "name": "web-sg",
            "tags": {
              "Name": "web-sg"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.Web_server",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:472665048339:subnet/subnet-0a5679831dce24d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-0a5679831dce24d58",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472665048339",
            "state": "available",
            "tags": {
              "Name": "Dev"
            },
            "vpc_id": "vpc-0cb02b537ba008008"
          }
        }
      ]
    },
    {
      "module": "module.Web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194c3e07668a7e36",
            "arn": "arn:aws:ec2:eu-west-2:472665048339:instance/i-09b9d56d8590e968b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b9d56d8590e968b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0207b3b9e300cf67c",
            "private_dns": "ip-10-0-1-87.eu-west-2.compute.internal",
            "private_ip": "10.0.1.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b8f2bed180b2a54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5679831dce24d58",
            "tags": {
              "Name": "Dev Server"
            },
            "tags_all": {
              "Name": "Dev Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-015dd8a82ed9ca772"
            ]
          },
          "dependencies": [
            "module.Security_Group.aws_security_group.Web-SG",
            "module.Security_Group.data.aws_vpc.my_vpc",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route.internet-r",
            "module.VPC.aws_route_table.internet-rt",
            "module.VPC.aws_subnet.Subnet1",
            "module.VPC.aws_vpc.VPC",
            "module.Web_server.data.aws_security_group.web-sg",
            "module.Web_server.data.aws_subnet.selected"
          ]
        }
      ]
    }
  ]
}